--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <h1>aqui vamos a hacer un blog</h1>
     <p>y este es el parrafo de inicio</p>
+    <p>este es otro parrafo</p>
 </body>
 
 </html>
