nuevo parrafo agregado en html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>aqui vamos a hacer un blog</h1>
     <p>y este es el parrafo de inicio</p>
     <p>este es otro parrafo</p>
+    <p>nuevo parrafo</p>
 </body>
 
 </html>
