cambios nuevos para el ejemplo de branches

--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 </head>
 
 <body>
-    <h1>aqui vamos a hacer un blog</h1>
-    <p>y este es el parrafo de inicio</p>
-    <p>este es otro parrafo</p>
-    <p>nuevo parrafo</p>
+    <div id="container">
+        <div id="post">
+            <h1>aqui vamos a hacer un blog</h1>
+            <p>y este es el parrafo de inicio</p>
+            <p>este es otro parrafo</p>
+            <p>nuevo parrafo</p>
+        </div>
+    </div>
 </body>
 
 </html>
