se creo la cabecera en el branch cabecera

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 <body>
     <div id="container">
+        <div id="cabecera">
+            <h1> esta es la cabecera</h1>
+        </div>
         <div id="post">
             <h1>aqui vamos a hacer un blog</h1>
             <p>y este es el parrafo de inicio</p>
